fix responsive on mobile and first work on shares

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -222,7 +222,6 @@ h6 {
   border: none;
   border-radius: 5px;
   box-shadow: 0px 0 30px rgba(1, 41, 112, 0.1);
-  height: 100%;
 }
 
 .card-header,
